# dropwell

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  EXCHANGE-COMPATIBILITY.md  EXCHANGE-EXAMPLES.md  EXCHANGE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.es.md  README.md  RESUMEN_PARA_ERIK.md  SECURITY.md  claude-gpt-exchange.py  docker-compose.yml  exchange-cli.py  exchange_drop_bridge.py  pyproject.toml  requirements.txt  test-exchange.py  test_compatibility_mode.py  test_one_time_deliveries.py
.github/workflows/: test.yml
api/: index.py
deploy/: drop.service  dropwell.service  tunnel-config.example.yml
deploy/postgres-init/: 01-create-test-db.sql
src/drop/: app.py  config.py
src/dropwell/: app.py  config.py  db.py  schema.sql
tests/: test_drop.py
