[project]
name = "dropwell"
version = "0.1.0"
requires-python = ">=3.12"
authors = [{ name = "Erik Bosch (Krinekk Lab)" }]
license = { text = "MIT" }
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "pydantic-settings",
    "psycopg2-binary",
    "mangum",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dropwell"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
